# python-gui

./: .gitignore  README.md  api_settings.json  file_analysis_report.md  pyproject.toml  requirements.in  run_mock_server.py  test_api_types.py  test_flexible_api_system.py
src/: logger.py  main.py
src/api/: __init__.py  client.py  definitions.py  flexible_types.py
src/config/: apis.py  settings_manager.py
src/gui/: api_config_dialog.py  api_dialog.py  api_panel.py  api_result_dialog.py  main_window.py  result_panel.py
src/mock_server/: __init__.py  main.py
src/models/: api_config.py  api_result_table_model.py  applications_table_model.py  dynamic_result_model.py  table_model.py
